<resources>
    <string name="app_name">ConservationMoney</string>
    <string name="parent_topname">节流省钱小助手</string>
    <string name="add_record">新增收入</string>
    <string name="consume_record">新增支出</string>
    <string name="main_mid_text">量入为出，适度消费！</string>
    <string name="add_hint_typename">请输入记账的类别</string>
    <string name="add_hint_data">请输入记账的数值</string>
    <string name="delete_all_record">全部记录删除</string>
    <string name="signin_name">用户名</string>
    <string name="signin_key">密码</string>
    <string name="signin_button">登录</string>
    <string name="signin_picdescribe">头像</string>
    <string name="classify_title">统计记账</string>
    <string name="classify_count_choose_hint">输入要查找的类型</string>
    <string name="time_count_button">re:时间统计</string>
    <string name="count_transfer">时间统计</string>
    <string name="type_count_button">re:类别统计</string>
    <string name="recount_data_hint">请输入类型</string>
</resources>