<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ExtraText"
    android:background="@color/skyblue">

    <RelativeLayout
        android:id="@+id/main_head_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/main_head_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/parent_topname"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_body_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_mid_text"
        android:padding="5dp" />

    <Button
        android:id="@+id/add_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@color/add_delete_record"
        android:text="@string/add_record"
        android:layout_margin="10dp"
        android:textColor="@color/textblue"/>

    <Button
        android:id="@+id/consume_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/add_record"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:background="@color/add_delete_record"
        android:text="@string/consume_record"
        android:textColor="@color/textblue" />
    <Button
        android:id="@+id/delete_all_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/consume_record"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:background="@color/add_delete_record"
        android:text="@string/delete_all_record"
        android:textColor="@color/textblue" />

    <TextView
        android:id="@+id/main_mid_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/main_head_layout"
        android:padding="10dp"
        android:text="@string/main_mid_text"
        android:textColor="@color/black"
        android:textSize="11sp" />
</RelativeLayout>